# engine

./: Makefile  README.md  imgui.ini  run.py
mini_engine/: CMakeLists.txt
mini_engine/shader/: basic.frag.glsl  basic.vert.glsl
mini_engine/src/: SceneObject.hpp  essentials.cpp  essentials.hpp  input.hpp  main.cpp  mesh.hpp  perlin.hpp  scene.cpp  scene.hpp  transform.hpp
mini_engine/src/components/: camera.hpp  mesh.hpp  transform.hpp
mini_engine/src/editor/: Block.hpp  BlockArgumentSlots.hpp  BlockConnections.hpp  BlockManager.hpp  BlockRenderer.hpp  BlockSnapping.hpp  BlockTypes.hpp  EditorState.hpp  EditorUI.hpp  MenuManager.hpp
